add: currency mask

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@popperjs/core": "^2.11.6",
     "angularjs-sweetalert2": "^1.0.0",
     "bootstrap": "^5.2.3",
+    "ngx-currency": "^3.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
